--- a/r2/r2/templates/csserror.html
+++ b/r2/r2/templates/csserror.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -17,33 +17,27 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved."
+## CondeNet, Inc. All Rights Reserved.
 ################################################################################
-
-<%namespace file="printable.html" import="yes_no_button" />
-<%namespace file="utils.html" import="plain_link, text_with_js"/>
-
-##TODO - need to prepend this id with thing.action as well
-<tr id="${thing.name}">
-  %for cell in thing.cells:
-    <td>
-      ${cell_type(cell)}
-    </td>
-  %endfor
-</tr>
-  
-<%def name="cell_type(name)">
-  %if name == "user":
-      <span class="user">
-         ${plain_link(thing.user.name, "/user/%s/" % thing.user.name, _sr_path=False)}
-         &nbsp;(<b>${thing.user.safe_karma}</b>)
-      </span>&nbsp;
-  %elif c.user_is_loggedin and name == "sendmessage" and c.user != thing.user:
-    ${plain_link(_("send message"), "/message/compose?to=%s" % (thing.user.name))}&nbsp;
-  %elif name == "remove" and thing.editable:
-    ${yes_no_button("remove", thing.name, _("remove"),
-    "return deletetoggle(this, UserTable.del('%s', '%s'));"
-    % (thing.type, thing.container_name),
-    _("removed"))}
+<% error = thing.error %>
+<li>
+  %if hasattr(error,'line'):
+    <a href="javascript:gotoTextboxLine('stylesheet_contents',${error.line})">
+      [line ${error.line}]
   %endif
-</%def>
+
+      ${error.message}
+
+  %if hasattr(error,'offending_line'):
+    <div>
+      <tt>
+        <pre>${error.offending_line}</pre>
+      </tt>
+    </div>
+  %endif
+
+  %if hasattr(error,'line'):
+    </a>
+  %endif
+
+</li>
