--- a/r2/r2/templates/navbutton.html
+++ b/r2/r2/templates/navbutton.html
@@ -17,20 +17,21 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved.
+## CondeNet, Inc. All Rights Reserved."
 ################################################################################
 
 <%namespace file="utils.html" import="plain_link" />
 
 <%def name="plain(selected = False)">
   ${plain_link(thing.selected_title() if selected else thing.title, 
-               thing.path, _sr_path = thing.sr_path, 
+               thing.path, _sr_path = thing.sr_path, nocname = thing.nocname,
+               target = thing.target, 
                _class = thing.css_class, _id = thing._id)}
 </%def>
 
 <%def name="js(selected = False)">
   ${plain_link(thing.selected_title() if selected else thing.title, 
-               '/', _sr_path = False,  
+               '/', _sr_path = False, nocname = thing.nocname, 
                _class = thing.css_class, _id = thing._id, onclick = thing.onclick)}
 </%def>
 
