--- a/r2/r2/templates/pagenamenav.html
+++ b/r2/r2/templates/pagenamenav.html
@@ -17,18 +17,20 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved.
+## CondeNet, Inc. All Rights Reserved."
 ################################################################################
+
+<%namespace file="utils.html" import="plain_link"/>
 
 <%def name="subreddit()">
   <span class="hover pagename redditname">
-    <a href="${c.site.path}">${c.site.name}</a>
+    ${plain_link(c.site.name, c.site.path, _sr_path=False)}
   </span>
 </%def>
 
 <%def name="reddits()">
   <span class="hover pagename redditname">
-    <a href="/reddits/">${_("reddits")}</a>
+    ${plain_link(_("reddits"), "/reddits/", _sr_path=False)}
   </span>
 </%def>
 
@@ -37,5 +39,5 @@
 </%def>
 
 <%def name="newpagelink()">
-<span class="newpagelink">reddit all?&#32;<a href="/new/">click here to find new links.</a></span>
+<span class="newpagelink">reddit all?&#32;${plain_link("click here to find new links.", "/new/", _sr_path=False)}</span>
 </%def>
