--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -17,14 +17,14 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved.
+## CondeNet, Inc. All Rights Reserved."
 ################################################################################
 
 <%! 
    from r2.lib.filters import edit_comment_filter, unsafe, safemarkdown
    from r2.lib.utils import timesince
  %>
-<%namespace file="utils.html" import="submit_form"/>
+<%namespace file="utils.html" import="submit_form, plain_link"/>
 <% user = thing.user %>
 %if thing.user:
 <div class="raisedbox">
@@ -65,9 +65,7 @@
 
     %if c.user_is_loggedin and not thing.isMe:
     <li>
-      <a href="/message/compose/?to=${thing.user.name}">
-        ${_("send message")}
-      </a>
+      ${plain_link(_("send message"), "/message/compose/?to=%s" % thing.user.name)}
     </li>
     <li>
       <form action="/post/friend" method="post">
