--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -17,7 +17,7 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved.
+## CondeNet, Inc. All Rights Reserved."
 ################################################################################
 
 <%!
@@ -32,13 +32,13 @@
   ${thing.footer_nav().render()}
 
   <p class="wired">
-    <a rel="nofollow" href="http://wired.com">
+    <a rel="nofollow" target="_top" href="http://wired.com">
       <img src="${static('wired_w.png')}" alt="wired" /></a>
-    <a rel="nofollow" href="http://wired.com">WIRED.com</a>-
-    <a rel="nofollow" href="http://howto.wired.com">WIRED How-To</a>
+    <a rel="nofollow" target="_top" href="http://wired.com">WIRED.com</a>-
+    <a rel="nofollow" target="_top" href="http://howto.wired.com">WIRED How-To</a>
   </p>
   <p class="bottommenu">
-    ${text_with_links(_("Use of this site constitutes acceptance of our %(user_agreement)s and %(privacy_policy)s"), user_agreement= (_("User Agreement {Genitive}"), "http://reddit.com/help/useragreement"), privacy_policy = (_("Privacy Policy {Genitive}"), "http://reddit.com/help/privacypolicy"))}.  
+    ${text_with_links(_("Use of this site constitutes acceptance of our %(user_agreement)s and %(privacy_policy)s"), nocname=True, user_agreement= (_("User Agreement {Genitive}"), "http://reddit.com/help/useragreement"), privacy_policy = (_("Privacy Policy {Genitive}"), "http://reddit.com/help/privacypolicy"))}.  
     <% old = _("(c) 2008 CondeNet, Inc. All rights reserved.") %>
     ${_("(c) %(year)d CondeNet, Inc. All rights reserved.") % \
     dict(year=2008)}
