--- a/r2/r2/templates/sidebox.html
+++ b/r2/r2/templates/sidebox.html
@@ -17,15 +17,21 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved.
+## CondeNet, Inc. All Rights Reserved."
 ################################################################################
 
+<%namespace file="utils.html" import="plain_link"/>
+
 <div class="sidebox ${thing.css_class}">
-  <a class="morelink"
-     %if not c.user_is_loggedin and thing.show_cover:
-       onclick="return(showcover(true, 'redirect_${thing.link}'));"
-     %endif
-     href="${thing.link}">${thing.title} &raquo;</a>
+  <%
+     if not c.user_is_loggedin and thing.show_cover:
+         onclick="return(showcover(true, 'redirect_%s'));" % thing.link
+     else:
+         onclick = None
+
+     nocname = thing.nocname
+  %>
+  ${plain_link(thing.title,thing.link, _sr_path = False, _class="morelink", onclick=onclick, nocname=nocname)}
   %if thing.subtitles:
     <div class="spacer">
       %for subtitle in thing.subtitles:
