--- a/r2/r2/templates/uploadedimage.html
+++ b/r2/r2/templates/uploadedimage.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -17,37 +17,15 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved."
+## CondeNet, Inc. All Rights Reserved.
 ################################################################################
-
-<% from r2.lib.template_helpers import replace_render, add_sr %>
-<%namespace file="utils.html" import="plain_link" />
-
-<%
-   _id = ("_%s" % thing.parent_name) if hasattr(thing, 'parent_name') else ''
- %>
-<div id="siteTable${_id}" class="sitetable">
-  <div id="ajaxHook${_id}" class="ajaxhook">
-  </div>
-
-  %for a in thing.things:
-     ${unsafe(replace_render(thing, a))}
-  %endfor
-</div>
-
-%if thing.nextprev and (thing.prev or thing.next):
-  <p class="nextprev"> ${_("view more:")}&#32;
-  %if thing.prev:
-    ${plain_link(_("prev"), thing.prev, rel="nofollow,prev")}  
-  %endif
-  %if thing.prev and thing.next:
-    &#32;|&#32;
-  %endif
-  %if thing.next:
-    ${plain_link(_("next"), thing.next, rel="nofollow,prev")}  
-  %endif
-  </p>
-%endif
-%if not thing.things:
-  <p id="noresults" class="error">${_("there doesn't seem to be anything here")}</p>
-%endif
+<html>
+  <head>
+    <script type="text/javascript">
+      parent.completedUploadHeaderImage('${thing.status}','${thing.img_src}', '${thing.op}');
+    </script>
+  </head>
+  <body>
+    you shouldn't be here
+  </body>
+</html>
