Catch IntegrityError thrown by multiple-clicking race condition

--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -48,7 +48,7 @@ ${self.robots()}
   var post_site = "${c.site.name}";
   var cnameframe  = ${'true' if c.cname else 'false'}; 
   var modhash = ${"'%s'" % c.modhash or "false"};
-  
+  var cur_domain = "${g.domain}";
 
 </script> 
 
