--- a/r2/r2/templates/link.xml
+++ b/r2/r2/templates/link.xml
@@ -23,16 +23,40 @@
 <%!
    from pylons.i18n import _, ungettext
    from r2.lib.template_helpers import add_sr
+   from r2.models import FakeSubreddit
 %>
-
+<% 
+   com_label = ungettext("comment", "comments", thing.num_comments)
+   url = "http://%s%s" % (request.host, add_sr(thing.permalink, nocname=True))
+   sr_path = "http://%s%s" % (request.host, thing.subreddit.path)
+ %>
 <item>
   <title>${thing.title}</title>
-  <link>http://${request.host}/goto?rss=true&amp;id=${thing._fullname}</link>
-  <guid>http://${request.host}/goto?rss=true&amp;id=${thing._fullname}</guid>
+  <link>${url}</link>
+  <guid isPermaLink="true">${url}</guid>
+  <pubDate>${thing._date.isoformat()}</pubDate>
   <dc:date>${thing._date.isoformat()}</dc:date>
   <description>
+    %if thing.thumbnail:
+      &lt;table&gt;
+        &lt;tr&gt;&lt;td&gt;
+          &lt;a href="${url}"&gt;&lt;img src="${thing.thumbnail}" alt="${thing.title}" title="${thing.title}" /&gt;&lt;/a&gt;
+        &lt;/td&gt;&lt;td&gt;
+    %endif
+    submitted by &lt;a href="http://${request.host}/user/${thing.author.name}"&gt;${thing.author.name}&lt;/a&gt;
+     %if isinstance(c.site, FakeSubreddit):
+      to &lt;a href="${sr_path}"&gt;${thing.subreddit.name}&lt;/a&gt; 
+    %endif
+    &lt;br/&gt;
     &lt;a href="${thing.url}"&gt;[link]&lt;/a&gt;
-    &lt;a href="http://${request.host}${add_sr(thing.permalink, nocname=True)}"&gt;[comments]&lt;/a&gt;
+    &lt;a href="${url}"&gt;[${thing.num_comments} ${com_label}]&lt;/a&gt;
+    %if thing.thumbnail: 
+      &lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;
+    %endif
   </description>
+  %if thing.thumbnail:
+    <media:title>${thing.title}</media:title>
+    <media:thumbnail url="${thing.thumbnail}" />
+  %endif
 </item>
 
